Some random exam preparation tasks completed

--- a/HTML-&-CSS-January-2025/08-Exercise-Responsive Web Design/Exercise-10-Cards – Online course/card-online-course.html
+++ b/HTML-&-CSS-January-2025/08-Exercise-Responsive Web Design/Exercise-10-Cards – Online course/card-online-course.html
@@ -12,7 +12,11 @@
                 <div class="card">
                     <div class="card-content">
                         <div class="card-header">
-                            <img class="media" src="/images/media.jpg" alt="" />
+                            <img
+                                class="media"
+                                src="./images/media.jpg"
+                                alt=""
+                            />
                             <h4 class="tag">Онлайн курс(на живо)</h4>
                             <h4 class="author">David Core</h4>
                             <img
