--- a/HTML-&-CSS-January-2025/11-Exam Preparation/13-HTML & CSS Exam - 30 October 2022/My Solutions/03-Fitness Site/index.html
+++ b/HTML-&-CSS-January-2025/11-Exam Preparation/13-HTML & CSS Exam - 30 October 2022/My Solutions/03-Fitness Site/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta
-            title="viewport"
-            content="width=device-width, initial-scale=1.0"
-        />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Examprep-Task03-Fitness Site</title>
         <link rel="stylesheet" href="styles/site.css" />
     </head>
