--- a/HTML-&-CSS-January-2025/11-Exam Preparation/2-HTML & CSS Regular Exam - 26 October 2024/My Solutions/02-CoffeeHub/index.html
+++ b/HTML-&-CSS-January-2025/11-Exam Preparation/2-HTML & CSS Regular Exam - 26 October 2024/My Solutions/02-CoffeeHub/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./style.css" />
   <link rel="stylesheet" href="./responsive.css" />
 </head>
-
+<!--  ba-->
 <body>
   <div>
     <div class="home-container">
@@ -123,6 +123,7 @@
       </div>
     </div>
   </div>
-</body>
+</body style>
+<textarea name="" id=""></textarea>
 
 </html>
